fix the logo bug: not display properly on Safari

--- a/stylesheet/landing.css
+++ b/stylesheet/landing.css
@@ -51,7 +51,6 @@ button {
 }
 
 .logo {
-    height: 10%;
     width: 10%;
     margin-bottom: 5px;
 }
